--- a/style.css
+++ b/style.css
@@ -56,13 +56,13 @@
     }
 
     .hero .corner {
-      position: absolute;
+      position: fixed;
       width: 5.625rem;
       height: 5.625rem;
       background-repeat: no-repeat;
       background-size: contain;
       pointer-events: none;
-      z-index: 2;
+      z-index: 100;
       opacity: 0;
     }
 
@@ -135,6 +135,7 @@
       color: var(--white);
       font-weight: 500;
       clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+      text-align: center;
     }
 
     .intro p {
@@ -145,6 +146,7 @@
       font-weight: 300;
       color: var(--text-color);
       font-style: italic;
+      text-align: center;
     }
 
     /* Navigation */
@@ -157,14 +159,22 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      z-index: 100;
-      transition: background-color 0.3s ease, padding 0.3s ease;
+      z-index: 99;
+      transition: background-color 1.5s ease, padding 0.3s ease, top 0.3s ease, bottom 0.3s ease;
       opacity: 0;
     }
 
     nav.scrolled {
+      top: 0;
+      bottom: auto;
+      opacity: 1;
       background-color: rgba(28, 28, 28, 0.95);
-      padding: 0.8rem 0;
+        --mask:
+          radial-gradient(56.6px at 50% calc(100% - 78px),#000 99%,#0000 101%) calc(50% - 60px) 0/120px 100%,
+          radial-gradient(56.6px at 50% calc(100% + 48px),#0000 99%,#000 101%) 50% calc(100% - 30px)/120px 100% repeat-x;
+        -webkit-mask: var(--mask);
+                mask: var(--mask);
+
     }
 
     .nav-container {
@@ -180,32 +190,36 @@
       align-items: center;
       gap: 0.2rem;
       list-style: none;
+      margin-bottom: 1.5rem;
     }
 
-    .nav-links a {
+    .nav-links {
+      display: flex;
+      gap: 0.2rem;
+    }
+
+    .nav-link {
       color: var(--white);
       text-decoration: none;
       font-size: 0.9rem;
       font-weight: 300;
       padding: 0.5rem 1rem;
       border-radius: 5px;
-      transition: background-color 0.3s ease, color 0.3s ease;
       position: relative;
-      cursor: pointer;
     }
 
-    .nav-links a::after {
-      content: '';
+    .nav-link::after {
+      content: "";
       position: absolute;
-      top: 0;
+      bottom: 0;
       left: 50%;
       width: 0;
       height: 1px;
-      background-color: var(--white);
+      background: var(--white);
       transition: width 0.3s ease, left 0.3s ease;
     }
 
-    .nav-links a:hover::after {
+    .nav-link:hover::after {
       width: 80%;
       left: 10%;
     }
@@ -232,6 +246,15 @@
       flex-direction: column;
       align-items: center;
       opacity: 0;
+
+      /* tablet viewport */
+      @media (min-width: 768px) and (max-width: 1024px) {
+        bottom: 8rem;
+      }
+      /* phone viewport */
+      @media (max-width: 768px) {
+        bottom: 12rem;
+      }
     }
 
     .scroll-indicator span {
