--- a/style.css
+++ b/style.css
@@ -257,6 +257,7 @@
       width: 90%;
       max-width: 1200px;
       height: 80vh;
+      opacity: 0;
       position: relative;
       transform: translateY(50px);
       transition: opacity 0.6s ease, transform 0.6s ease;
@@ -315,11 +316,6 @@
       margin-bottom: 1rem;
     }
 
-    .look-description {
-      margin-bottom: 2rem;
-      max-width: 500px;
-    }
-
     .look-image {
       flex: 1;
       position: relative;
@@ -343,6 +339,41 @@
 
     .look-image:hover img {
       transform: scale(1);
+    }
+
+    @media (max-width: 992px) {
+      .look-content {
+        flex-direction: column;
+        height: auto;
+      }
+
+      .look-image {
+        height: 50vh;
+        transform: perspective(1000px) rotateY(0);
+        margin-top: 2rem;
+      }
+
+      .look-number {
+        font-size: 8rem;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .intro h1 {
+        font-size: 4rem;
+      }
+
+      .intro p {
+        font-size: 1rem;
+      }
+
+      .look-info h2 {
+        font-size: 2rem;
+      }
+
+      .nav-container {
+        width: 95%;
+      }
     }
 
 
